--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                     <img src="image/messi.jpg" alt="Месси">
                 </div>
 
-                <div class="flex">
-                    <aside class="listfunction">
+                <div class="flex main-info">
+                    <aside>
                         <h2>Футбольні партнери</h2>
-                        <ul>
+                        <ul class="listfunction">
                             <li><a href="#">останні новини</a></li>
                             <li><a href="#">приватний менеджер Вася</a></li>
                             <li><a href="#">фанати сектору №48</a></li>
